chore: update dependencies and configure ESLint and Prettier
- Added new dependencies: @ianvs/prettier-plugin-sort-imports, babel-plugin-react-compiler, eslint-config-prettier, eslint-plugin-react-hooks, husky, lint-staged, prettier, and prettier-plugin-tailwindcss.
- Updated ESLint configuration to include prettier and react-hooks recommendations.
- Enabled experimental React compiler in Next.js configuration.
- Added lint-staged and format scripts to package.json for better code formatting and linting.
- Created a pre-commit hook to run lint-staged before commits.

--- a/package.json
+++ b/package.json
@@ -6,9 +6,21 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "format": "bunx prettier . --write",
+    "prepare": "husky"
+  },
+  "lint-staged": {
+    "**/*": "prettier --write --ignore-unknown"
+  },
+  "prettier": {
+    "plugins": [
+      "@ianvs/prettier-plugin-sort-imports",
+      "prettier-plugin-tailwindcss"
+    ]
   },
   "dependencies": {
+    "@ianvs/prettier-plugin-sort-imports": "^4.4.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.522.0",
@@ -23,8 +35,15 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "babel-plugin-react-compiler": "^19.1.0-rc.2",
     "eslint": "^9",
     "eslint-config-next": "15.3.4",
+    "eslint-config-prettier": "^10.1.5",
+    "eslint-plugin-react-hooks": "^6.0.0-rc.1",
+    "husky": "^9.1.7",
+    "lint-staged": "^16.1.2",
+    "prettier": "^3.6.0",
+    "prettier-plugin-tailwindcss": "^0.6.13",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.3.4",
     "typescript": "^5"
